<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_vision_kit</name>
  <version>1.0.0</version>
  <description>
Ros2 Vision Kit consists of packages to interface ROS 2 with OpenCV and a library of Vision-based Algorithms that provide state of the art Detection, Segmentation and Tracking. Its main purpose is to provide Real-Time operations for ROS. </description>
  <maintainer email="ashok_a380@icloud.com">regatte</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>vision_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
